# epstein-search

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: house_dems.txt
src/epstein_document_search/: __init__.py  prepare.py  prepare_for_meilisearch.py  split_json.py
website/: index.html
