[project]
name = "epstein-document-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin H Wilson", email = "khwilson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
epstein-document-search = "epstein_document_search:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
